--- a/socket-client/src/pages/chatpage/chatpage.styles.scss
+++ b/socket-client/src/pages/chatpage/chatpage.styles.scss
@@ -89,3 +89,28 @@
         line-height: 40px;
     }
 }
+
+@media only screen and (max-width: 600px) {
+    .about-content {
+        position: relative;
+        display: block;
+
+
+        & li {
+            font-size: 15px;
+            margin-bottom: 22px;
+        }
+    
+        & p {
+            font-size: 10px;
+            line-height: 20px;
+        }
+    }
+    .chatbox-container {
+        left: 20px;
+        top: 300px;
+        position: absolute;
+        display: block;
+      width: 90%;
+    }
+  }
